syntax  = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";

package user_api_v1;

option go_package = "github.com/ewik2k21/grpc_simple/pkg";

service UserService {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  rpc UpdateUser(UpdateUserRequest) returns (google.protobuf.Empty);
  rpc DeleteUser(DeleteUserRequest) returns (google.protobuf.Empty);
}

message DeleteUserRequest{
  int64 id = 1;
}

message UpdateUserRequest{
  int64 id = 1;
  google.protobuf.StringValue name = 2;
  google.protobuf.StringValue email = 3;
}

message GetUserRequest{
  int64 id = 1;
}

message GetUserResponse{
  int64 id = 1;
  string name = 2;
  string email = 3;
  UserRole role = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}

message CreateUserRequest {
  string name = 1;
  string email = 2;
  string password = 3;
  string password_confirm = 4;
  UserRole role = 5;
}

message CreateUserResponse {
  int64 id = 1;
}

enum UserRole {
  USER = 0;
  ADMIN = 1;
}